# ros-navbot

./: README.md
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/lib/example_ros_cpp/: pid_controller_node
devel/lib/pkgconfig/: differential_drive.pc  example_ros_cpp.pc  kinect_launch.pc  navbot.pc  navbot_control.pc  robot_setup_tf.pc  ros_deep_learning.pc  rplidar_ros.pc
devel/lib/ros_deep_learning/: detectnet
differential_drive/: manifest.xml
differential_drive/launch/: odom_ekf.launch
differential_drive/scripts/: diff_tf.py  virtual_joystick.py  wheel_loopback.py  wheel_scaler.py
kinect_launch/: CMakeLists.txt  package.xml
launch/: mapping_view.rviz
navbot/launch/: amcl_diff.launch  mapping.launch  move_base.launch  rtabmap_mapping.launch
navbot/param/: base_local_planner_params.yaml  costmap_common_params.yaml
navbot/param/edited/: local_costmap_params.yaml
navbot/scripts/: serial_node_1.py
navbot_control/config/test/: controller_params_pid.yaml
navbot_control/include/: my_robot_hw_interface.h
navbot_control/launch/: hw_control.launch
navbot_control/launch/test/: differential_drive_sim.launch
navbot_control/rviz/: urdf.rviz
navbot_control/scripts/: gopigo_controller.py
navbot_control/src/: my_robot_base.cpp
robot_setup_tf/: CMakeLists.txt  package.xml
robot_setup_tf/src/: tf_broadcaster.cpp
rviz/: blind_nav.rviz  robot.rviz
slam_gmapping/gmapping/launch/: slam_gmapping.launch  slam_gmapping_pr2.launch
slam_gmapping/gmapping/src/: slam_gmapping.cpp
src/differential_drive/: CMakeLists.txt  package.xml
src/differential_drive/launch/: motor_sim.launch  tf_controller.launch
src/differential_drive/scripts/: pid_velocity.py  twist_to_motors.py
src/example_ros_cpp-master/: .gitignore  CMakeLists.txt  Doxyfile  README.md  package.xml
src/example_ros_cpp-master/include/pid_controller/: pid_controller_base.h  pid_controller_node.h  pid_controller_ros.h
src/example_ros_cpp-master/launch/: pid_controller.launch
src/example_ros_cpp-master/src/: pid_controller_base.cpp  pid_controller_ros.cpp
src/example_ros_cpp-master/src/nodes/: pid_controller_node.cpp
src/kinect_launch/launch/: cameralaunch.launch
src/navbot/: CMakeLists.txt  package.xml
src/navbot/launch/: amcl_diff.launch  mapping_lidar.launch  navigation.launch  navigation_rplidar.launch  slam_gmapping.launch  wifi_comm.launch
src/navbot/maps/: firstmap.yaml  living.pgm  living.yaml  map1.yaml  room.yaml  room_sucsess.yaml  testmap.pgm  testmap.yaml
src/navbot/param/: base_local_planner_params.yaml  costmap_common_params.yaml
src/navbot/scripts/: serial_node_2.py
src/navbot_control/: CMakeLists.txt  package.xml
src/navbot_control/config/: navbot_control.yaml  navbot_control_common.yaml
src/navbot_control/launch/: pid_control.launch
src/navbot_control/scripts/: gopigo_controller.py
src/navbot_control/urdf/: navbot.urdf
src/robot_setup_tf/: CMakeLists.txt
src/robot_setup_tf/src/: tf_broadcaster_rplidar.cpp
src/ros_deep_learning/src/: node_detectnet.cpp
src/rplidar-ros/launch/: rplidar.launch  (+1 more)
(+14 files in other folders)
