<?xml version="1.0"?>
<package>
  <name>example_ros_cpp</name>
  <version>0.1.0</version>
  <description>An example of a ROS C++ package.</description>

  <maintainer email="tomislav.haus@gmail.com">Tomislav Haus</maintainer>
  <license>Apache2.0</license>
  <url type="website">http://github.com/larics/example_ros_cpp</url>
  <author email="tomislav.haus@gmail.com"></author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
